Working rainbow brush

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 
   <div class = 'btn_nav1'>
     <button id='clearBtn'>Clear</button>
-    <button id='setBtn'>Set Size</button>    
+    <button id='setBtn'>Set Size</button>  
+    <button id='eraserBtn'>Eraser</button>  
   </div>
+  <br>
+  <div class = 'btn_nav2'>
+    <button id='blackBtn'>Black</button>
+    <button id='rainbowBtn'>Rainbow</button>
+    <button id='pencilBtn'>Pencil</button>
+  </div>
+  <br>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
